# AutoWoundCare

./: README.md  kinect_bridge.py
src/wound_tracking/: package.xml  setup.cfg  setup.py
src/wound_tracking/launch/: full_pipeline.launch.py  isaac_moveit.launch.py  pose_detection.launch.py  real.launch.py  real_mannequin.launch.py  scan_arc_motion.launch.py  scan_arc_plan_only.launch.py  scan_arc_preview.launch.py  scan_motion.launch.py  scan_preview.launch.py  sim.launch.py  sim_mannequin.launch.py  sim_motion.launch.py  wound_report.launch.py  yolo_pose.launch.py
src/wound_tracking/scripts/: calibrate_eye_in_hand.py  calibrate_eye_in_hand_g.py  isaac_ros2_setup.py  offline_eye_in_hand.py  offline_eye_in_hand_v2.py
src/wound_tracking/urdf/: camera.urdf.xacro  scene.urdf.xacro
src/wound_tracking/worlds/: tracking_scene.sdf  tracking_scene_mannequin.sdf
src/wound_tracking/wound_tracking/: approach_node.py  calibrated_tf_publisher_node.py  camera_driver_node.py  fake_scan_targets_node.py  feature_detector_node.py  generate_wound_report.py  isaac_trajectory_bridge.py  kinect2_driver_node.py  locking_node.py  motion_controller_node.py  orchestrator_node.py  pose_estimation_node.py  scan_loop_node.py  scan_pose_arc_node.py  scan_pose_publisher_node.py  skeleton_tracker.py  tune_eye_in_hand.py  view_detection.py  wound_report_collector_node.py  yolo_detect.py  yolo_pose_node.py  yolo_wound_detector_node.py
